--- a/MvcApplication1/MvcApplication1/Views/Shared/_Layout.cshtml
+++ b/MvcApplication1/MvcApplication1/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MvcApplication 1 &bull; @ViewBag.Title</title>
     @if (IsSectionDefined("AddToHead"))
     {
@@ -12,7 +13,6 @@
     @Styles.Render("~/Content/css")
 </head>
 <body>
-    <div class="container">
         <noscript>
             <div class="alert">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -20,7 +20,6 @@
             </div>
         </noscript>
 
-        <div class="row">
             @if (IsSectionDefined("sidebar"))
             {
                 <div class="span2">
@@ -29,23 +28,17 @@
             }
 
             <div class="container-fluid">
-        <div class="row-fluid">
             
-            <!--/span-->
                 <div class="row-fluid"><br />
                 @RenderBody()
                     </div>
-            <!--/span-->
-        </div>
         <!--/row-->
         <hr>
         <footer>
             <p>&copy; 2014</p>
-        </footer>
-    </div><!--/.fluid-container-->
+        </footer><!--/.fluid-container-->
     <!-- <span class="hiddenSpellError" pre="">javascript</span> Section -->
         </div>
-    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/knockout")
